--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build"
   ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "storybook": "start-storybook -p 6006",
+    "storybook:export": "build-storybook"
   },
   "keywords": [
     "react",
@@ -19,9 +21,13 @@
   "author": "matt.miao",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.3",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@storybook/react": "^6.2.9",
     "@types/react": "^17.0.9",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^10.0.0",
     "node-sass": "^6.0.0",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
@@ -31,6 +37,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
+    "sass-loader": "^10.2.0",
     "typescript": "^4.3.2"
   },
   "peerDependencies": {
