--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
   ],
   "scripts": {
     "build": "rollup -c",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
-    "storybook:export": "build-storybook"
+    "storybook:export": "build-storybook",
+    "prepublishOnly": "npm run build"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
   "keywords": [
     "react",
@@ -25,9 +32,14 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@storybook/react": "^6.2.9",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
+    "@types/jest": "^26.0.23",
     "@types/react": "^17.0.9",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
     "node-sass": "^6.0.0",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
@@ -38,10 +50,7 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass-loader": "^10.2.0",
+    "ts-jest": "^27.0.2",
     "typescript": "^4.3.2"
-  },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
   }
 }
