--- a/package.json
+++ b/package.json
@@ -52,5 +52,6 @@
     "sass-loader": "^10.2.0",
     "ts-jest": "^27.0.2",
     "typescript": "^4.3.2"
-  }
+  },
+  "homepage": "https://github.com/miaolq/lazy-img"
 }
