--- a/package.json
+++ b/package.json
@@ -53,5 +53,6 @@
     "ts-jest": "^27.0.2",
     "typescript": "^4.3.2"
   },
-  "homepage": "https://github.com/miaolq/lazy-img"
+  "homepage": "https://github.com/miaolq/lazy-img",
+  "repository": "https://github.com/miaolq/lazy-img"
 }
